--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,7 +35,7 @@ header:
     show_search: False
     show_theme_chooser: true
     logo:
-      text: "Jinyi Liu"
+      text: "Jinyi Liu (刘金毅)"
 
 # Site footer
 footer:
