--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -32,8 +32,8 @@ header:
     enable: true
     blox: "navbar"
     fixed_to_top: true
-    show_search: False
-    show_theme_chooser: true
+    show_search: false
+    show_theme_chooser: false
     logo:
       text: "Jinyi Liu (刘金毅)"
 
