--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -57,3 +57,10 @@ sitemap:
 services:
   googleAnalytics:
     id: G-51XTL78GSK
+marketing:
+  analytics:
+    google_analytics: 'G-51XTL78GSK'
+params:
+  marketing:
+    analytics:
+      google_analytics: 'G-51XTL78GSK'
