--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -17,7 +17,7 @@ marketing:
     description: 'Welcome to My personal website. I research Reinforcement Learning and LLMs, with a focus on building interpretable decision-making agents and enabling real-world LLM applications.'
     twitter: 'GetResearchDev'
   analytics:
-    google_analytics: ''
+    google_analytics: 'G-51XTL78GSK'
     baidu_tongji: ''
     plausible: ''
     fathom: ''
