--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     twitter: 'GetResearchDev'
   analytics:
     google_analytics: 'G-51XTL78GSK'
-    baidu_tongji: ''
+    baidu_tongji: '6430cd75035f06788c343dc659b438d6'
     plausible: ''
     fathom: ''
     pirsch: ''
