--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -3,6 +3,9 @@
 # Documentation: https://docs.hugoblox.com/
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
+# Default metadata so every page stays out of search results unless it opts in.
+robots: "noindex, nofollow"
+
 # Appearance
 appearance:
   mode: system
